// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`callbacks called on load if SPA: 1 - routes - FIRST - beforeEnter 1`] = `1`;

exports[`callbacks called on load if SPA: 1 - routes - FIRST - thunk 1`] = `1`;

exports[`callbacks called on load if SPA: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`callbacks called on load if SPA: 1 - routes - REDIRECTED - onComplete 1`] = `1`;

exports[`callbacks called on load if SPA: firstRoute - /first - 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/redirected",
    "search": "",
    "state": Object {},
    "url": "/redirected",
  },
]
`;

exports[`callbacks called on load if SPA: firstRoute - /first - 1 - history_index 1`] = `0`;

exports[`callbacks called on load if SPA: firstRoute - /first - 1 - initial_state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "hasSSR": false,
    "hash": "",
    "index": 0,
    "kind": "init",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "prev": Object {
      "basename": "",
      "entries": Array [],
      "hasSSR": false,
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "type": "FIRST",
    "url": "/first",
  },
  "title": "@@redux/INIT",
}
`;

exports[`callbacks called on load if SPA: firstRoute - /first - 1 - response 1`] = `
Object {
  "payload": "redirect_complete",
  "type": "REDIRECTED_COMPLETE",
}
`;

exports[`callbacks called on load if SPA: firstRoute - /first - 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/redirected",
        "search": "",
        "state": Object {},
        "url": "/redirected",
      },
    ],
    "hasSSR": false,
    "hash": "",
    "index": 0,
    "kind": "redirect",
    "length": 1,
    "params": Object {},
    "pathname": "/redirected",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 302,
    "type": "REDIRECTED",
    "url": "/redirected",
  },
  "title": "REDIRECTED_COMPLETE_\\"redirect_complete\\"",
}
`;

exports[`callbacks called on load if SPA: firstRoute - /first - 1 - title 1`] = `"REDIRECTED"`;
